Fix undesirably squashed layout of creation details on Archival descriptions pages

--- a/css/less/scaffolding.less
+++ b/css/less/scaffolding.less
@@ -38,7 +38,7 @@ footer {
 }
 
 #footer-content-wrapper {
-  display: table; 
+  display: table;
   margin: 0 auto;
   width: 1170px
 }
@@ -1192,7 +1192,6 @@ section .vcard:last-child > .field:last-child > div {
   .creation-details {
     color: @grayLight;
     font-size: @baseFontSize * 0.90;
-    margin-top: -10px !important;
   }
 
   // List of details
